<resources>
    <string name="app_name">Servosa</string>

    <!-- Activity Login -->
    <string name="act_login_title_1">NOTIFICACIONES DE EVENTOS DE RIESGO</string>
    <string name="act_login_title_2">EN RUTAS DE TRANSPORTE</string>
    <string name="act_login_hint_input_username">USUARIO</string>
    <string name="act_login_hint_input_password">●●●●●●●</string>
    <string name="act_login_error_datos_usuario">Ingrese sus datos de usuario correctamente.</string>
    <string name="act_login_error_login">Ocurrio un error iniciando sesion, intentalo de nuevo.</string>
    <!-- - * - -->

    <!-- Navigation Drawer -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_evento</item>
        <item>@string/nav_item_listado_evento</item>
        <item>@string/nav_item_estadisticas</item>
        <item>@string/nav_item_exportar_excel</item>
        <item>@string/nav_item_actualizar</item>
        <item>@string/nav_item_configurar</item>
        <item>@string/nav_item_cerrar</item>
    </string-array>
    <string name="nav_item_evento">Nuevo Evento</string>
    <string name="nav_item_listado_evento">Listado de Eventos</string>
    <string name="nav_item_estadisticas">Graficos Estadisticos</string>
    <string name="nav_item_exportar_excel">Exportar Resumenes</string>
    <string name="nav_item_actualizar">Actualizar</string>
    <string name="nav_item_configurar">Configurar</string>
    <string name="nav_item_cerrar">Cerrar Sesión</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- - * - -->

    <!-- Activity Main -->
    <string name="act_main_text_title_1">Seleccione una opcion a realizar</string>
    <string name="act_main_text_title_2">Opciones disponibles por rango de uso</string>
    <string name="act_main_menu_1">NUEVO EVENTO</string>
    <string name="act_main_menu_2">LISTADO DE EVENTOS</string>
    <string name="act_main_menu_3">GRAFICOS ESTADISTICOS</string>
    <string name="act_main_menu_4">EXPORTAR EXCELS</string>
    <string name="act_main_menu_5">ACTUALIZAR</string>
    <string name="act_main_menu_6">CONFIGURAR</string>
    <string name="act_main_menu_7">CERRAR</string>
    <string name="act_main_informacion_actualizada">Informacion Actualizada</string>
    <string name="act_main_cerrar_sesion_title">Cerrar Sesion</string>
    <string name="act_main_cerrar_sesion_message">¿Está seguro que desea cerrar sesión?</string>
    <!-- - * - -->

    <!-- Activity Nuevo Evento -->
    <string name="act_nuevo_evento_title">NUEVO EVENTO</string>
    <string name="act_nuevo_evento_spnnr_text_1">SELECCIONE UNA OPERACION</string>
    <string name="act_nuevo_evento_spnnr_text_2">SELECCIONE UNA RUTA</string>
    <string name="act_nuevo_evento_spnnr_text_3">SELECCIONE UN TRAMO</string>
    <string name="act_nuevo_evento_spnnr_text_4">EVENTO</string>
    <string name="act_nuevo_evento_spnnr_text_5">CATEGORIA</string>
    <string name="act_nuevo_evento_spnnr_text_6">TIPO</string>
    <string name="act_nuevo_evento_spnnr_text_7">NUMERO DE PLACA</string>
    <string name="act_nuevo_evento_spnnr_text_8">DESCRIPCION</string>
    <string name="act_nuevo_evento_error_datos_ingresados">Seleccione e ingrese todos los datos correctamente antes de enviar su evento.</string>
    <string name="act_nuevo_evento_error_guardar_registros">Lo sentimos ocurrio un error al guardar los registros necesarios para generar un evento, inténtalo de nuevo.</string>

    <!-- - * - -->

    <!-- Activity Listado de Eventos -->
    <string name="act_listado_evento_title">LISTADO DE EVENTOS</string>
    <string name="act_listado_evento_no_hay_eventos_registrados">Actualmente no tiene ningun evento registrado.</string>
    <!-- - * - -->

    <!-- Activity Graficos Piramide -->
    <string name="act_graficos_estadisticos_title">PIRAMIDE NACIONAL</string>
    <string name="act_graficos_estadisticos_texto_leyenda_muertes">Muerte / Incapacitantes</string>
    <string name="act_graficos_estadisticos_texto_leyenda_accidentes_personales">Accidentes Daños Personales</string>
    <string name="act_graficos_estadisticos_texto_leyenda_accidentes_propiedad">Accidentes Daños Propiedad</string>
    <string name="act_graficos_estadisticos_texto_leyenda_casi_accidentes">Casi Accidentes</string>
    <string name="act_graficos_estadisticos_texto_leyenda_condiciones_inseguras">Comportamiento de Riesgo / Condiciones Inseguras</string>
    <!-- - * - -->

    <!-- Activity Graficos Comportamiento Seguros -->
    <string name="act_graf_comportamiento_seguros_texto_comportamiento_riesgo">Comportamiento riesgo</string>
    <string name="act_graf_comportamiento_seguros_texto_comportamiento_seguro">Comportamiento seguro</string>
    <string name="act_graf_comportamiento_seguros_error_configuracion_title">Error de Configuración</string>
    <string name="act_graf_comportamiento_seguros_error_configuracion_message">Ocurrio un error al inicializar los datos de configuración del grafico., inténtalo de nuevo.</string>
    <string name="act_graf_comportamiento_seguros_no_hay_registros">No se encontro datos de comportamiento de riesgo y/o seguro registrados.</string>
    <!-- - * - -->

    <!-- Activity Exportar Excel -->
    <string name="act_exportar_excel_title">EXPORTAR EXCELS</string>
    <string name="act_exportar_no_hay_registros">No se encontro datos de accidentabilidad registrados.</string>
    <string name="act_exportar_success_exportar_excel">El reporte en excel se ha genarado correctamente.</string>
    <!-- - * - -->

    <!-- Activity Configurar -->
    <string name="act_configurar_title">CONFIGURACION</string>
    <string name="act_configurar_btn_actualizacion">Actualizar Información</string>
    <string name="act_configurar_btn_activar_gps">Activar GPS</string>
    <string name="act_configurar_btn_activar_wifi">Activar WIFI</string>
    <string name="act_configurar_btn_notificar_error_app">Notificar error de la aplicación</string>
    <!-- - * - -->

    <!-- Class: Connection -->
    <string name="please_connect_to_internet">Compruebe su conexión a Internet e inténtalo de nuevo.</string>
    <string name="title_dialog_connect_to_internet">No hay conexión a Internet.</string>
    <string name="message_dialog_connect_to_internet">¿Desea activar o verificar su estado de conexion a Internet?</string>

    <!-- Class: JSONObject -->
    <string name="json_object_exception">Ocurrio un error al procesar los datos recibidos. Por favor, inténtalo de nuevo.</string>

    <!-- Class: Volley -->
    <string name="volley_error_title">Error de conexión</string>
    <string name="volley_error_message">Hubo un error y no se pudo procesar la solicitud.\n\nPor favor, inténtalo de nuevo.</string>

    <!-- Class: ModalFiltro -->
    <string name="modal_filtro_piramide_error_registro_operaciones">Actualmente no tiene ningun registro de operaciones, sincronice los datos antes de proceder a este sección.</string>
    <string name="title_activity_grafico_comp_seguro">GraficoCompSeguroActivity</string>

</resources>
