<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/blanco">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imgBackgroundLogin"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="0.5">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgLogoServosa"
                    android:layout_gravity="center_horizontal|bottom"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/act_login_title_1"
                    android:id="@+id/textView"
                    android:layout_gravity="center_horizontal"
                    android:textSize="13dp"
                    android:textColor="@color/azul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/act_login_title_2"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/azul"
                    android:textSize="13dp" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters|textEmailAddress"
                    android:ems="10"
                    android:id="@+id/txtUserName"
                    android:hint="@string/act_login_hint_input_username"
                    android:gravity="center"
                    android:textSize="13dp"
                    android:drawableLeft="@drawable/icono_usuario"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/txtPassword"
                    android:gravity="center"
                    android:hint="@string/act_login_hint_input_password"
                    android:textSize="13dp"
                    android:drawableLeft="@drawable/icono_candado"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>
