<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pe.servosa.android.NuevoEventoActivity">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/main_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/act_nuevo_evento_title"
                android:id="@+id/textView12"
                android:textColor="@color/blanco"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/gris">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView"
                android:fillViewport="true" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/ripple_spinner_nuevo_evento"
                            android:clickable="true"
                            android:id="@+id/btnSeleccioneOperacion"
                            android:visibility="gone">

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".9"
                                android:layout_gravity="center_vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@android:style/TextAppearance.Small"
                                    android:text="@string/act_nuevo_evento_spnnr_text_1"
                                    android:id="@+id/txtSeleccioneOperacion"
                                    android:textAllCaps="true"
                                    android:layout_gravity="center" />
                            </LinearLayout>

                            <FrameLayout
                                android:orientation="horizontal"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".1">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_gravity="center|left">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="?android:attr/textAppearanceSmall"
                                        android:text="▲"
                                        android:id="@+id/textView14"
                                        android:textColor="@color/colorAccent"
                                        android:textSize="10dp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="?android:attr/textAppearanceSmall"
                                        android:text="▼"
                                        android:id="@+id/textView15"
                                        android:textColor="@color/colorAccent"
                                        android:textSize="10dp" />
                                </LinearLayout>

                            </FrameLayout>
                        </LinearLayout>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:id="@+id/spnrSeleccioneOperacion"
                            android:layout_marginBottom="15dp"
                            android:drawSelectorOnTop="true"
                            android:spinnerMode="dialog"/>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="15dp"
                            android:spinnerMode="dialog"
                            android:drawSelectorOnTop="true"
                            android:id="@+id/spnrSeleccioneRuta" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="15dp"
                            android:spinnerMode="dialog"
                            android:drawSelectorOnTop="true"
                            android:id="@+id/spnrSeleccioneTramo" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="15dp"
                            android:spinnerMode="dialog"
                            android:drawSelectorOnTop="true"
                            android:id="@+id/spnrSeleccioneEvento" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="15dp"
                            android:spinnerMode="dialog"
                            android:drawSelectorOnTop="true"
                            android:id="@+id/spnrSeleccioneCategoria" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="15dp"
                            android:spinnerMode="dialog"
                            android:drawSelectorOnTop="true"
                            android:id="@+id/spnrSeleccioneTipo" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="15dp"
                            android:spinnerMode="dialog"
                            android:drawSelectorOnTop="true"
                            android:id="@+id/spnrSeleccioneNumPlaca" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_background_nuevo_evento"
                            android:id="@+id/txtDescripcion"
                            android:hint="@string/act_nuevo_evento_spnnr_text_8"
                            android:textAppearance="@android:style/TextAppearance.Small"
                            android:gravity="center"
                            android:minHeight="60dp"
                            android:padding="5dp"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:textColorHint="@color/gris_b" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/btnEnviarEvento"
                            android:layout_gravity="center"
                            android:src="@drawable/image_btn_circle_enviar" />
                    </FrameLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
